syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Event {
    string id = 1;
    string title = 2;
    string text = 3;
    string owner = 4;
    google.protobuf.Timestamp start_time = 5;
    google.protobuf.Timestamp end_time = 6;
}

message CreateEventRequest {
    string title = 1;
    string text = 2;
    string owner = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 5;
}

message CreateEventResponse {
    oneof result {
        Event event = 1;
        string error = 2;
    }
}

message UpdateEventRequest {
    string id = 1;
    string title = 2;
    string text = 3;
    string owner = 4;
    google.protobuf.Timestamp start_time = 5;
    google.protobuf.Timestamp end_time = 6;
}

message UpdateEventResponse {
    oneof result {
        Event event = 1;
        string error = 2;
    }
}

message DeleteEventRequest {
    string id = 1;
}

message DeleteEventResponse {
    oneof result {
        string error = 1;
    }
}

service CalendarService {
    rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse) {
    }
    rpc DeleteEvent (DeleteEventRequest) returns (DeleteEventResponse) {
    }
    rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse) {
    }
    rpc ListEvents (ListEventsRequest) returns (ListEventsResponse) {
    }
}

message ListEventsRequest {
    string owner = 1;
    google.protobuf.Timestamp start_time = 2;
}

message ListEventsResponse {
    repeated Event events = 1;
}
